--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,25 +2,25 @@
   <div class="inner">
     <div class="user__wrapper">
       <h2 class="page-heading">
-        <%= "#{@name}さんの情報"%>
+        <%= "#{@user.name}さんの情報"%>
       </h2>
       <table class="table">
         <tbody>
           <tr>
             <th class="table__col1">名前</th>
-            <td class="table__col2"><%= @name %></td>
+            <td class="table__col2"><%= @user_name %></td>
           </tr>
           <tr>
             <th class="table__col1">プロフィール</th>
-            <td class="table__col2"><%= @profile %></td>
+            <td class="table__col2"><%= @user_profile %></td>
           </tr>
           <tr>
             <th class="table__col1">所属</th>
-            <td class="table__col2"><%= @occupation %></td>
+            <td class="table__col2"><%= @user_occupation %></td>
           </tr>
           <tr>
             <th class="table__col1">役職</th>
-            <td class="table__col2"><%= @position %></td>
+            <td class="table__col2"><%= @user_position %></td>
           </tr>
         </tbody>
       </table>
@@ -28,7 +28,7 @@
         <%= "#{@user.name}さんのプロトタイプ"%>
       </h2>
       <div class="user__card">
-        <%= render partial: "prototypes/prototype", collection: @prototypes %>
+        <%= render partial: "prototypes/prototype", collection: @user.prototypes %>
       </div>
     </div>
   </div>
